--- a/css/calcinhadamoda.css
+++ b/css/calcinhadamoda.css
@@ -20,14 +20,11 @@ div#top {
 }
 div#top h1 {
     color: #FFFFFF;
-    text-align: center;
     font-size: 120px;
-    margin: 50px 0 0;
 }
 div#top p {
     /*border:solid 1px #000000;*/
     color: #FFFFFF;
-    width: 100%;
     font-size: 12px;
 }
 div#top img {
@@ -104,14 +101,13 @@ div#content_1 a:hover {
 }
 #info p {
     /*border:solid 1px #000;*/
-    width: 100%;
-    padding: 0 10%;
-    margin: 25px 0;
+    margin: 25px 75px;
 }
 
 
 /*contato*/
 #contato {
+    /*border:solid 1px #000;*/
     float: left;
 }
 #contato h2 {
@@ -194,7 +190,6 @@ div#content_1 a:hover {
 }
 #sobre p {
     /*border:solid 1px #000;*/
-    width: 800px;
     margin: 10px 250px;
 }
 
@@ -228,9 +223,9 @@ div#content_1 a:hover {
 }
 #produtos label, p, span {
     /*border:solid 1px #000;*/
-    width: 240px;
+/*    width: 240px;
     text-align: center;
-    float: left;
+    float: left;*/
 }
 #produtos label {
     font-weight: bold;
