--- a/css/calcinhadamoda.css
+++ b/css/calcinhadamoda.css
@@ -221,11 +221,13 @@ div#content_1 a:hover {
 #produtos a {
     text-decoration: none !important;
 }
-#produtos label, p, span {
+#produtos label, 
+#produtos p, 
+#produtos span {
     /*border:solid 1px #000;*/
-/*    width: 240px;
+    width: 240px;
     text-align: center;
-    float: left;*/
+    float: left;
 }
 #produtos label {
     font-weight: bold;
