--- a/css/calcinhadamoda.css
+++ b/css/calcinhadamoda.css
@@ -213,10 +213,11 @@ a.fancybox-nav {
 }
 #produtos ul li {
     border: solid 1px #efeded;
-    min-height: 400px;
+    min-height: 450px;
     width: 254px;
     margin: 10px;
     padding: 2px;
+    text-align: center;
     float: left;
 }
 #produtos ul li:hover {
@@ -224,6 +225,7 @@ a.fancybox-nav {
 }
 #produtos img {
     max-width: 250px;
+    max-height: 250px;
 }
 #produtos a {
     text-decoration: none !important;
@@ -238,7 +240,7 @@ a.fancybox-nav {
 }
 #produtos label {
     font-weight: bold;
-    padding: 10px;
+    padding: 25px 0 10px;
 }
 #produtos p {
     
